WIP: added login using filemaker db request

--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,11 @@ DB_DATABASE=example_app
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION=filemaker
 FM_DB_HOST=
 FM_DB_DATABASE=
-FM_DB_USERNAME=
-FM_DB_PASSWORD=
+#FM_DB_USERNAME=
+#FM_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
